<resources>
    <string name="app_name">androidProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="tipsH">HEALTHY DEVICE</string>

    <string name="tipsH1">UNINSTALL OLD APPLICATION</string>
    <string name="tip1">The best thing to do in order to keep your phone healthy is to go through
        your applications and delete those that you no longer use.</string>

    <string name="tipsH2">KEEP YOUR SOFTWARE UPDATED</string>
    <string name="tip2">Regardless of whether you run iOS or Android, it’s vitally important for your phone’s health
        that you keep the software up-to-date.
        These usually have bug fixes and updates which fix issues on the device</string>


    <string name="tipsH3">AVOID OVER CHARGING</string>
    <string name="tip3">Most modern phones aren’t really supposed to be charged to the max, nor are they meant to run out of battery completely.
        This is due to how the batteries are designed</string>


    <string name="tipsH4">INSURE YOU DEVICE</string>
    <string name="tip4">This may seem obvious, but a fairly easy way to make sure that your mobile phone remains in good
        shape is to invest in comprehensive phone insurance.</string>


    <string name="tipsH5">AVOID USING IN EXTREME TEMPS</string>
    <string name="tip5">The health of your smartphone is very dependent on how well the battery operates. A sure-fire way of putting the battery under undue strain is to expose your smartphone to
        extreme temperatures – both hot and cold.</string>

    <string name="tipsH6">LOW POWER MODE</string>
    <string name="tips6">Most, if not all, modern smartphones have some form of low-power mode, which reduced functionality in order
        to preserve battery life and power. try to utilize this feature as much as possible</string>


    <string name="review">\ \ \ \ \ \ Sid  \n\ \ \ \ \ \ \"The staff at this place is amazing  \n \ \ \ \ \ for Tech Repair \"\n\n \ \ \ \ \ Sam \n \ \ \ \ \ \"Trustworthy stop for tech repairs\"</string>
    <string name="Tips">Click on heading for more info</string>

    <string name="callbackH">REQUEST A CALLBACK</string>
    <string name="uremail">EMAIL</string>
    <string name="urphone">PHONE NO.</string>
    <string name="reasonForcall">BRIEF REASON</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="device">DEVICE</string>
    <string name="name">NAME</string>
    <string name="refresh">REFRESH</string>
    <string name="qoute">Tech solutions at one stop</string>
    <string name="nameApp2">TECH GENICS</string>

    <string name="call">CALL</string>
    <string name="email">EMAIL</string>
    <string name="insta">INSTAGRAM</string>
    <string name="web">WEBSITE</string>
    <string name="loc">LOCATION</string>
    <string name="face">FACEBOOK</string>


</resources>